// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pipeline build 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "yarn run lint",
      "commands": undefined,
      "depends_on": undefined,
      "key": undefined,
      "label": undefined,
      "plugins": undefined,
    },
    Object {
      "command": "cd dir",
      "commands": Array [
        "cd dir",
        "yarn run build",
      ],
      "depends_on": undefined,
      "key": undefined,
      "label": undefined,
      "plugins": undefined,
    },
    Object {
      "command": undefined,
      "commands": undefined,
      "depends_on": undefined,
      "key": undefined,
      "label": undefined,
      "plugins": undefined,
    },
  ],
}
`;

exports[`Pipeline checks 1`] = `
Object {
  "steps": Array [
    Object {
      "command": "set -e",
      "commands": Array [
        "set -e",
        "cd back-end",
        "yarn install --frozen-lockfile --development",
        "yarn run setup",
        "yarn run check:workspaces",
      ],
      "depends_on": undefined,
      "key": undefined,
      "label": ":typescript: check:workspaces (back-end)",
      "plugins": Array [
        Object {
          "docker#v3.10.0": Object {},
        },
      ],
    },
    Object {
      "command": "cd dir",
      "commands": Array [
        "cd dir",
        "yarn run build",
      ],
      "depends_on": undefined,
      "key": undefined,
      "label": undefined,
      "plugins": undefined,
    },
    Object {
      "command": undefined,
      "commands": undefined,
      "depends_on": undefined,
      "key": undefined,
      "label": undefined,
      "plugins": undefined,
    },
  ],
}
`;
